--- a/css/indexstyles.css
+++ b/css/indexstyles.css
@@ -12,6 +12,7 @@
 	display: block;
 	border: 1px solid #00ff00;
 	border-radius:10px;
+	margin-top:2vh;
 }
 
 #linkcontainer{
@@ -102,6 +103,10 @@
 		align-items:center;
 		height:450px;
 		margin-top:3vh;
+	}
+	.botcontainers{
+		width:100%;
+		margin:0;
 	}
 	.botcontainers{
 		height:400px;
