--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 *{
-	 font-family: "Roboto",Gadget, sans-serif;
-	 margin:0;
-	 padding:0;
+	font-family: 'Grandstander', cursive;	 
+	margin:0;
+	padding:0;
+	font-weight:800;
 }
 
 body{
