--- a/css/museumstyles.css
+++ b/css/museumstyles.css
@@ -40,8 +40,11 @@ p{
 	p{
 		font-size:80%;
 	}
+	.containers{
+		width:100%;
+	}
 }
-@media only screen and (max-width: 850px){
+@media only screen and (max-width: 300px){
 	h3{
 		font-size:80%;
 	}
