--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,9 @@ body{
 	position:relative;
 	min-height: 100vh;
 }
+img{
+	box-shadow:0 0 20px rgba(0,0,0,0.8);
+}
 #header{
 	display:flex;
 	background: #248232;
