--- a/css/downtown.css
+++ b/css/downtown.css
@@ -25,10 +25,12 @@ h1{
 .infobox{
 	width:100%;
 	display:flex;
+	margin-top:5vh;
+	justify-content:center;
+	align-items:center;
 }
 .text{
 	width:50%;
-	margin-left:5%;
 	text-align:center;
 	display:flex;
 	justify-content:center;
@@ -36,7 +38,7 @@ h1{
 	margin-right:3%;
 }
 p{
-	margin-top:5vh;
+	margin-top:3vh;
 }
 h3{
 	margin-top:2vh;
